Use ansible docker_image module

--- a/ansible-playbook/group_vars/docker-hosts/docker.yml
+++ b/ansible-playbook/group_vars/docker-hosts/docker.yml
@@ -21,3 +21,6 @@ docker_restart_policy: 'always'
 
 # Network names
 docker_network_frontend: 'frontend'
+
+# docker force build images
+docker_image_force_build: true
