Remove ansible role docker-pull-images
This role only serves to pre-pull images before they are used,
introducing unnecessary dependencies into other roles.

Variables from this role are either eliminated entirely or
moved to the roles that use them.

--- a/roles/docker-openldap/defaults/main.yml
+++ b/roles/docker-openldap/defaults/main.yml
@@ -38,7 +38,7 @@ openldap_docker_restore_dir: '{{ bacula_dest }}{{ openldap_docker_backup_dir }}'
 # Utility container - phpldapadmin
 
 # the name of the image used for the container
-phpldapadmin_image_name: '{{ repository_images.phpldapadmin.image }}'
+phpldapadmin_image_name: 'osixia/phpldapadmin:latest'
 
 # the name of the container being started
 phpldapadmin_container_name: '{{ docker_name_prefix }}phpldapadmin'
