Use docker named networks

--- a/ansible-playbook/group_vars/docker-hosts/docker.yml
+++ b/ansible-playbook/group_vars/docker-hosts/docker.yml
@@ -18,3 +18,6 @@ docker_backup_dir: '/tmp/docker'
 
 # docker service restart policy
 docker_restart_policy: 'always'
+
+# Network names
+docker_network_frontend: 'frontend'
