--- a/roles/docker-mediawiki/tasks/main.yml
+++ b/roles/docker-mediawiki/tasks/main.yml
@@ -87,16 +87,12 @@
 # Create the data volumes
 
 - name: data-volume container (mediwiki)
-  docker_datavolume:
-    image_name: '{{ wiki_image_name }}'
-    image_tag: '{{ docker_image_tag }}'
-    data_volume_container_name: '{{ wiki_dv_name }}'
+  docker_volume:
+    name: '{{ wiki_dv_name }}'
 
 - name: data-volume container (mysql)
-  docker_datavolume:
-    image_name: '{{ wiki_db_image_name }}'
-    image_tag: '{{ docker_image_tag }}'
-    data_volume_container_name: '{{ wiki_db_dv_name }}'
+  docker_volume:
+    name: '{{ wiki_db_dv_name }}'
 
 - name: stop prev container (mysql)
   docker_container:
@@ -140,11 +136,12 @@
     volumes_from: 
       - '{{ openssl_dv_name }}'
       - '{{ wiki_dv_name }}'
-      env:
-        - WIKI_HOSTNAME={{ container_addr_map.wiki.hostname }}
-        - WIKI_MAIL_USER=wiki
-        - WIKI_MAIL_PASSWORD={{ wiki_email_password | quote }}
-      image: '{{ wiki_image_name }}:{{ docker_image_tag }}'
+    env:
+      WIKI_HOSTNAME: '{{ container_addr_map.wiki.hostname }}'
+      WIKI_MAIL_USER: 'wiki'
+      WIKI_MAIL_PASSWORD: '{{ wiki_email_password | quote }}'
+    image: '{{ wiki_image_name }}:{{ docker_image_tag }}'
+    state: started
 
 # *****************************************************************************
 # restore?
