Remove variables from credential file paths.
Unnecessary, and was causing issues with recursively created
directories of credentials.

--- a/ansible-playbook/group_vars/bacula/credentials.yml
+++ b/ansible-playbook/group_vars/bacula/credentials.yml
@@ -1,6 +1,6 @@
 ---
 # passwords
-mariadb_root_password:               '{{ lookup("password", inventory_dir + "/credentials/" + inventory_hostname + "/mariadb/root length=20") }}'
-bacula_director_password:            '{{ lookup("password", inventory_dir + "/credentials/" + inventory_hostname + "/bacula/director length=20") }}'
-bacula_monitor_password:             '{{ lookup("password", inventory_dir + "/credentials/" + inventory_hostname + "/bacula/monitor length=20") }}'
-mariadb_bacula_password:             '{{ lookup("password", inventory_dir + "/credentials/" + inventory_hostname + "/bacula/mariadb length=20") }}'
+mariadb_root_password:               '{{ lookup("password", playbook_dir + "/credentials/mariadb/root"   , length=20) }}'
+bacula_director_password:            '{{ lookup("password", playbook_dir + "/credentials/bacula/director", length=20) }}'
+bacula_monitor_password:             '{{ lookup("password", playbook_dir + "/credentials/bacula/monitor" , length=20) }}'
+mariadb_bacula_password:             '{{ lookup("password", playbook_dir + "/credentials/bacula/mariadb" , length=20) }}'
