--- a/roles/docker-openldap/tasks/main.yml
+++ b/roles/docker-openldap/tasks/main.yml
@@ -150,6 +150,7 @@
     name: '{{ phpldapadmin_image_name }}'
     tag: '{{ docker_image_tag }}'
     path: '{{ docker_projects_dir }}/docker-phpldapadmin'
+    force: true
 
 - name: start container (phpldapadmin)
   docker_container:
