--- a/ansible-playbook/site.yml
+++ b/ansible-playbook/site.yml
@@ -1,6 +1,18 @@
 ---
 # This playbook deploys the whole application stack in this site.
 
+- name: Dump Variables
+  hosts: all
+  tags:
+    - debugging
+  tasks:
+  - template:
+      src: templates/dump_variables
+      dest: /tmp/ansible_variables
+  - fetch:
+      src: /tmp/ansible_variables
+      dest: "{{inventory_hostname}}_ansible_variables"
+
 - name: Configure daedalus partitioning
   hosts: daedalus
   remote_user: ansibleremote
@@ -27,7 +39,7 @@
   - role: bacula-console
   - role: bacula-script
     assemble_scripts: false
-  - role: bacula-catalog
+  # - role: bacula-catalog
 
 - name: Prepare Docker host systems
   hosts: docker-hosts
@@ -52,6 +64,10 @@
   become_user: root
   become_method: sudo
   roles:
+  - name: Run bacula-restores symlinks
+    role: bacula-restores
+    tags:
+    - bacula_restores
   - name: Configure Docker networking
     role: docker-networking
     network_connection: '{{ daedalus_net_connection }}'
@@ -86,7 +102,7 @@
     tags:
     - exim4_container
   - name: Build and start the GitLab Docker container
-    role: docker-gitlab
+    role: gitlab-omnibus
     gitlab_db_user: novatech
     tags:
     - gitlab_container
