--- a/roles/docker-mediawiki/tasks/main.yml
+++ b/roles/docker-mediawiki/tasks/main.yml
@@ -82,6 +82,7 @@
     name: '{{ wiki_image_name }}'
     tag: '{{ docker_image_tag }}'
     path: '{{ docker_projects_dir }}/docker-mediawiki'
+    force: True
 
 # *****************************************************************************
 # Create the data volumes
@@ -101,7 +102,7 @@
   docker_container:
     name: '{{ wiki_db_container_name }}'
     detach: true
-    restart_policy: always
+    restart_policy: no
     image: '{{ wiki_db_image_name }}'
     volumes:
       - '{{ wiki_db_dv_name }}:/var/lib/mysql:z'
@@ -134,7 +135,7 @@
   docker_container:
     name: '{{ wiki_container_name }}'
     detach: true
-    restart_policy: always
+    restart_policy: no
     hostname: '{{ wiki_hostname }}'
     ports: '{{ wiki_port_args }}'
     networks:
@@ -154,3 +155,4 @@
 
 - include_tasks: restore.yml
   when: st_mediawiki_restore.stat.exists == False
+  tags: restore
