Update gitlab to 10.1

--- a/ansible-playbook/group_vars/docker-hosts/docker.yml
+++ b/ansible-playbook/group_vars/docker-hosts/docker.yml
@@ -17,7 +17,7 @@ docker_restore_config_base_dir: '/etc/docker_container.conf/{{ docker_image_tag 
 docker_backup_dir: '/tmp/docker'
 
 # docker service restart policy
-docker_restart_policy: 'no'
+docker_restart_policy: 'always'
 
 # Network names
 docker_network_frontend: 'frontend'
