--- a/docker/docker-gitlab-data/Dockerfile
+++ b/docker/docker-gitlab-data/Dockerfile
@@ -3,8 +3,7 @@
 #
 # Version 0.1
 
-ARG  GITLAB_VERSION=7.14.3
-FROM sameersbn/gitlab:$GITLAB_VERSION
+FROM sameersbn/gitlab:7.14.3
 MAINTAINER Joseph Lutz <Joseph.Lutz@novatechweb.com>
 
 # copy wrapper script
