--- a/roles/gitlab-sameersbn-8/defaults/main.yml
+++ b/roles/gitlab-sameersbn-8/defaults/main.yml
@@ -1,5 +1,7 @@
 ---
 
+gitlab_version: 8.8.0
+
 # The hostname passed as an envirnment variable into the container
 gitlab_ip_addr: '127.0.0.1'
 gitlab_hostname: git.example.com
@@ -16,7 +18,7 @@ gitlab_db_user: novatech
 
 # the name of the image being duilt and used for the container
 gitlab_image_repo: 'https://github.com/novatechweb/docker-gitlab.git'
-gitlab_image_name: '{{ docker_registry_username }}/gitlab'
+gitlab_image_name: 'sameersbn/gitlab:8.0.0'
 gitlab_dv_image_name: '{{ docker_registry_username }}/gitlab'
 gitlab_db_image_name: 'postgres'
 gitlab_db_image_tag: '9.4'
