--- a/roles/docker-openldap/tasks/main.yml
+++ b/roles/docker-openldap/tasks/main.yml
@@ -107,7 +107,7 @@
 # *****************************************************************************
 # Start the data container running
 
-- name: start container (ldap)
+- name: create container (ldap)
   docker_container:
     name: '{{ openldap_container_name }}'
     detach: true
@@ -123,6 +123,7 @@
     image: '{{ openldap_image_name }}:{{ docker_image_tag }}'
     networks:
       - name: '{{ docker_network_frontend }}'
+    state: present
 
 # *****************************************************************************
 # Update or make the image.
@@ -161,16 +162,17 @@
 
 - include_tasks: restore.yml
   when: st_openldap_restore.stat.exists == False
+  tags: restore
 
 # *****************************************************************************
 # Set the LDAP passwords
 
-- name: wait for LDAP to start
-  wait_for:
-    delay: 5
-    host: '{{ container_addr_map.ldap.ip_addr }}'
-    port: 389
-    state: started
+# - name: wait for LDAP to start
+#   wait_for:
+#     delay: 5
+#     host: '{{ openldap_ip_addr }}'
+#     port: 389
+#     state: started
 
 - name: set LDAP admin password
   command: 'docker exec -i {{ openldap_container_name }} /docker-entrypoint.sh set_admin_pass {{ openldap_admin_password | quote }}'
