--- a/ansible-playbook/buildbot.yml
+++ b/ansible-playbook/buildbot.yml
@@ -33,6 +33,7 @@
     buildbot_master: "{{ hostvars.buildbot_master.ip_addr }}"
   roles:
   - role: buildbot-worker-assets
+  - role: buildbot-worker-ntel
 
 - name: Gitlab public keys for buildbot containers
   hosts: daedalus
@@ -48,3 +49,9 @@
       username: buildbot
       pubkey: "{{ hostvars.buildbot_master.pubkey }}"
       title: "buildbot_master"
+  - name: Add buildbot_worker_ntel pubkey to buildbot user
+    role: gitlab-sshkey
+    vars:
+      username: buildbot
+      pubkey: "{{ hostvars.buildbot_worker_ntel.pubkey }}"
+      title: "buildbot_worker_ntel"
